--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- General and theme style sheets -->
 <link rel="stylesheet" href="reveal.js/css/reveal.css">
-<link rel="stylesheet" href="reveal.js/css/theme/beige.css" id="theme">
+<link rel="stylesheet" href="reveal.js/css/theme/simple.css" id="theme">
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
@@ -11830,7 +11830,9 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1>Modeling a Mars Colony</h1>
+<p><h1>Modeling a Mars Colony</h1>
+    <h4>Doug Woodward</h4></p>
+
 </div>
 </div>
 </div></section></section><section><section>
@@ -20798,7 +20800,30 @@ MTMzs6L9F8OdsNCRfO67AAAAAElFTkSuQmCC
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-
+<p><h1>Sources</h1></p>
+<p><ul></p>
+<li>Technological Forecasting and Social Change 61(3):209–214, 1999.
+        Carrying Capacity: A Model with Logistically Varying Limits
+        PERRIN S. MEYER and JESSE H. AUSUBEL2
+</li>
+<li>UN Population Division https://esa.un.org/unpd/wpp/</li>
+<li>"The History of the Human Population From the First Beginnings to the Present" in "Demography: Analysis and Synthesis: A Treatise in Population"
+        Jean-Noël Biraben, 
+         (Eds: Graziella Caselli, Jacques Vallin, Guillaume J. Wunsch) Vol 3, Chapter 66, pp 5–18, Academic Press, San Diego 
+</li>
+<li>
+Jean-Noël Biraben, "Le Point sur l'Histoire de la Population du Japon", Population Vol. 48 (no. 2), pp. 443-472 (1993)
+</li>
+<li>"Integrated modelling of global environmental change. An overview of IMAGE 2.4",
+         History Database of the Global Environment.
+         K. Klein Goldewijk and G. van Drecht, 
+         "HYDE 3.1: Current and historical population and land cover", 
+               in Eds. A. F. Bouwman, T. Kram, and K. Klein Goldewijk, 
+         Netherlands Environmental Assessment Agency (MNP), Bilthoven, The Netherlands.
+</li>
+<li>Robert M. Zubrin (Pioneer Astronautics), Christopher P. McKay. NASA Ames Research Center (c. 1993). "Technological Requirements for Terraforming Mars"
+</li>
+<li> Clifford, S. M. and T. J. Parker, 2001: The Evolution of the Martian Hydrosphere: Implications for the Fate of a Primordial Ocean and the Current State of the Northern Plains, Icarus 154, 40–79.</li>
 </div>
 </div>
 </div></section></section>
