--- a/index.html
+++ b/index.html
@@ -12321,7 +12321,7 @@ RESyipITERERySpKTkRERCSrKDkRERGRrPL/RnpDlld+wVEAAAAASUVORK5CYII=
 <p><hr></p>
 <p><latex>
 \[
-(t) = K_{1}+ \frac{K_{2}}{1+\exp(-r_{k}(t-t_{m_k}))}
+K(t) = K_{1}+ \frac{K_{2}}{1+\exp(-r_{k}(t-t_{m_k}))}
 \]
 </latex></p>
 <hr>
