--- a/index.html
+++ b/index.html
@@ -15428,7 +15428,7 @@ QmCC
 </div>
 </div>
 
-</div><div class="fragment">
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -15440,7 +15440,7 @@ do some extrapolation as to how a Mars Population might grow!</p>
 
 </div>
 </div>
-</div>
+</div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
@@ -15479,7 +15479,7 @@ do some extrapolation as to how a Mars Population might grow!</p>
 </div>
 </div>
 
-</div></div></section></section><section><section>
+</div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[63]:</div>
