--- a/index.html
+++ b/index.html
@@ -19835,7 +19835,7 @@ NMOKJElqmmFFkiQ1zbAiSZKaZliRJElNM6xIkqSm/QSzr553tDT9MQAAAABJRU5ErkJggg==
 </div>
 </div>
 
-</div>
+</div><div class="fragment">
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -19846,7 +19846,7 @@ NMOKJElqmmFFkiQ1zbAiSZKaZliRJElNM6xIkqSm/QSzr553tDT9MQAAAABJRU5ErkJggg==
 
 </div>
 </div>
-</div></section><section>
+</div></div></section><section>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -21010,7 +21010,7 @@ MTMzs6L9F8OdsNCRfO67AAAAAElFTkSuQmCC
 </div>
 </div>
 
-</div>
+</div></section></section><section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[133]:</div>
